--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": false,
   "name": "vue-jasper",
   "version": "1.0.1-alpha",
-  "description": "A Vue component to consume Jasper server reports",
+  "description": "A Vue component, based on Element UI, to consume Jasper server reports",
   "main": "./dist/vue-jasper.js",
   "scripts": {
     "build": "rimraf ./dist && webpack --config ./webpack.config.js --mode development"
