--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": false,
   "name": "vue-jasper",
-  "version": "1.0.1-alpha",
+  "version": "1.0.2-alpha",
   "description": "A Vue component, based on Element UI, to consume Jasper server reports",
   "main": "./dist/vue-jasper.js",
   "scripts": {
@@ -27,7 +27,6 @@
   "homepage": "https://github.com/el95149/vue-jasper#readme",
   "dependencies": {
     "axios": "0.18.0",
-    "element-ui": "2.7.2",
     "font-awesome": "4.7.0"
   },
   "devDependencies": {
@@ -38,6 +37,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "babel-runtime": "^6.26.0",
     "bili": "^4.7.3",
+    "element-ui": "^2.8.2",
     "rimraf": "^2.6.3",
     "rollup-plugin-vue": "^5.0.0",
     "uglifyjs-webpack-plugin": "^2.1.2",
