Convert CSV report to JSON

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   },
   "homepage": "https://github.com/el95149/vue-jasper#readme",
   "dependencies": {
-    "axios": "^0.18.1"
+    "axios": "^0.18.1",
+    "csvtojson": "^2.0.10"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
