--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,21 @@
 {
   "presets": [
-    "es2015",
-    "stage-2"
+    ["@babel/preset-env", { "modules": false }]
   ],
-  "plugins": [
-    "transform-runtime"
-  ],
-  "comments": false
+  "comments": false,
+  "plugins": ["@babel/plugin-proposal-object-rest-spread"],
+  "env": {
+    "test": {
+      "presets": [
+        [
+          "@babel/preset-env",
+          {
+            "targets": {
+              "node": "current"
+            }
+          }
+        ]
+      ]
+    }
+  }
 }
