--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "A Vue component, based on Element UI, to consume Jasper server reports",
   "main": "./dist/vue-jasper.js",
   "scripts": {
-    "build": "rimraf ./dist && webpack --config ./webpack.config.js --mode development"
+    "build": "rimraf ./dist && webpack --config ./webpack.config.js --mode development",
+    "test": "jest"
   },
   "files": [
     "dist/*"
@@ -32,24 +33,44 @@
     "vue-chartjs": "^3.4.2"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-runtime": "^6.26.0",
+    "@babel/core": "^7.6.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
+    "@babel/preset-env": "^7.6.3",
+    "@vue/test-utils": "^1.0.0-beta.29",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^24.9.0",
+    "babel-loader": "^8.0.0",
     "bili": "^4.7.3",
     "element-ui": "^2.8.2",
+    "jest": "^24.9.0",
+    "jest-serializer-vue": "^2.0.2",
     "rimraf": "^2.6.3",
     "rollup-plugin-vue": "^5.0.0",
     "uglifyjs-webpack-plugin": "^2.1.2",
     "vue": "^2.6.10",
     "vue-html-loader": "^1.2.4",
+    "vue-jest": "^3.0.5",
     "vue-loader": "^15.7.0",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.1",
     "webpack-merge": "^4.2.1"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "vue"
+    ],
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/src/$1"
+    },
+    "transform": {
+      "^.+\\.js$": "<rootDir>/node_modules/babel-jest",
+      ".*\\.(vue)$": "<rootDir>/node_modules/vue-jest"
+    },
+    "snapshotSerializers": [
+      "<rootDir>/node_modules/jest-serializer-vue"
+    ]
   }
 }
